# diy-tftp

./: CMakeLists.txt  main.c  tftp_base.c  tftp_base.h  tftp_client.c  tftp_client.h  tftp_server.c  tftp_server.h
